# vayra

./: .env.example  .gitignore  .vercelignore  HANDOFF.md  README.md  VAYRA-INFRA-SETUP.md  VAYRA-STATUS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  styles.css
.github/workflows/: android-build.yml  android-release.yml  cira-db.yml  desktop-release.yml  flatpak.yml  frontend.yml  harbor-core.yml  src-tauri.yml  tauri-build.yml  vayra-core.yml
api/trakt/: device-token.js
api/v1/: feedback.js
docs/: branding-compatibility.md  cira-complete-report.md  cira-compte-rendu.md  cira-discover.md  cira-pr1-report.md  cira-pr2-report.md  cira-v1-report.md  compte-rendu-cira-groups-v2.md  compte-rendu-cira-vara-beta-privee.md  compte-rendu-luma-complet.md  compte-rendu-private-beta-launch.md  compte-rendu-recette-ui-collections.md  compte-rendu-vara-collections.md  deploiement-archive-room-gap.md  deploiement-vara-collections-v2.md  deploiement-vara-collections.md  deploiement-vara-gc-cron.md  luma.md  private-beta-launch.md  private-beta-operator-runbook.md  release-finalization-2026-07-18.md  setup-feedback.md  setup-updater.md  tests-charge-gc-cron.md  vara-veya-architecture.md  vara-veya-implementation-report.md  vayra-codex-claude-delivery-report.md  vayra-delivery-report.md  vayra-email-auth.md  vayra-recap-abc.md  vayra-reconstruction-report.md  vayra-visual-identity.md  watch-room-audit.md  watch-room-guide-exploitation.md  watch-room-guide-utilisateur.md  watch-room-qualification.md  watch-room-recette.md
flatpak/: README.md  cargo-sources.json  node-sources.json  site.harbor.Harbor.desktop  site.harbor.Harbor.metainfo.xml  site.harbor.Harbor.yml  site.vayra.Vayra.desktop  site.vayra.Vayra.metainfo.xml  site.vayra.Vayra.yml  update-flatpak.sh
harbor-core/src/: lib.rs
public/: index.html  styles.css
public/updates/: latest.json
scripts/: bundle-libmpv-macos.mjs  gen-latest-json.mjs  smoke-harbor-core.mjs  smoke-vayra-core.mjs  verify-release-readiness.mjs
scripts/cira/: db-concurrency-test.sh  db-loadtest-gc.sh  db-test.sh  remote-smoke.sql
scripts/vara/: remote-smoke.sql
site/: README.md  VAYRA-INFRA-SETUP.md  VAYRA-STATUS.md  package.json  vercel.json
site/docs/: setup-imdb.md  setup-oauth-proxies.md  setup-relay.md  setup-static.md  setup-tvdb.md  setup-updater.md
site/public/: index.html  legal.css  motion.js  privacy.html  robots.txt  sitemap.xml  support.html  terms.html
site/scripts/: gen-latest-json.mjs
src/: App.tsx  harbor-core-wasm.d.ts  index.css  main.tsx  useKeyboardNavigation.ts  vayra-core-wasm.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.flatpak.conf.json  tauri.linux-system.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: browser.json  default.json  hdr-overlay.json  modal-overlay.json  pip.json
src-tauri/icons/: icon.icns
src-tauri/installer/: eula.txt  generate-art.mjs
src-tauri/src/: airplay.rs  browser.rs  cast.rs  cast_hls.rs  cast_server.rs  discord_rp.rs  dlna.rs  fullscreen.rs  hdr_overlay.rs  http_fetch.rs  lib.rs  local_lib.rs  modal_overlay.rs  mpv.rs  mpv_render_mac.rs  multiview.rs  pip.rs  pip_mac.rs  power.rs  proc_mem.rs  roku.rs  settings_store.rs  song_id.rs  stream_proxy.rs  streams.rs  stremio_auth.rs  thumbs.rs  torrent_engine.rs  tray.rs  vara_client.rs  web_server.rs
src-tauri/src/mobile_stubs/: cast.rs  hdr_overlay.rs  mpv.rs  proc_mem.rs  tray.rs  vara_client.rs
src-tauri/src/torrent_engine/: cache_sweep.rs  netcheck.rs  stream_route.rs
src/chrome/: cinematic-overlay.tsx  forest-sidebar.tsx  (+9 more)
supabase/: README.md  config.toml
vara-broker/: Cargo.toml
vara-broker/src/: broker.rs  lib.rs  main.rs  protocol.rs  server.rs  transport.rs
vara-broker/tests/: broker.rs
vayra-core/: Cargo.toml
(+856 files in other folders)
