[package]
name = "vara-broker"
version = "0.1.0"
edition = "2021"
description = "Standalone local broker for VARA/VEYA playback-intent sync. No tauri, no media bytes — only play/pause/seek/position intent crosses the wire."

[lib]
name = "vara_broker"
path = "src/lib.rs"

[[bin]]
name = "vayra-vara-broker"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
] }
